--- a/education.html
+++ b/education.html
@@ -16,10 +16,10 @@
       </a>
     </div>
     <nav class="header__menu">
-      <a href="#">Главная</a>
+      <a href="/">Главная</a>
       <a href="#">Работы</a>
-      <a href="#">Цены</a>
-      <a href="#">Обучение</a>
+      <a href="/services.html">Цены</a>
+      <a href="/education.html">Обучение</a>
       </nav>
     <a href="#" class="header__inst">
       <img src="img/inst.svg" alt="">
@@ -287,10 +287,10 @@
         </a>
         <div class="footer__top-menu">
           <nav>
-            <a href="#">Главная</a>
+            <a href="/">Главная</a>
             <a href="#">Работы</a>
-            <a href="#">Цены</a>
-            <a href="#">Обучения</a>
+            <a href="/services.html">Цены</a>
+            <a href="/education.html">Обучение</a>
           </nav>
         </div>
       </div>
