--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       </a>
     </div>
     <nav class="header__menu">
-      <a href="#">Главная</a>
+      <a href="/">Главная</a>
       <a href="#">Работы</a>
-      <a href="#">Цены</a>
-      <a href="#">Обучение</a>
+      <a href="/services.html">Цены</a>
+      <a href="/education.html">Обучение</a>
       </nav>
     <a href="#" class="header__inst">
       <img src="img/inst.svg" alt="">
@@ -264,7 +264,7 @@
             </div>
             <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
               <div class="card-body">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis voluptate cum nostrum error modi. Accusantium, ex vel perferendis ipsam molestias corrupti labore soluta ad dolor tempore dignissimos nobis maiores mollitia?
+                Потому что нужно понимать, что первая процедура всегда направлена на: заполнение пустот; приданое лёгкого объема и увлажнение. У филлеров эффект накопительный, поэтому стойкий результат наблюдается после 2-3 процедур.
               </div>
             </div>
           </div>
@@ -279,7 +279,7 @@
             </div>
             <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
               <div class="card-body">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, itaque. Eveniet dolorem placeat saepe itaque cupiditate voluptas obcaecati libero numquam aliquid, ratione laboriosam iste natus est reiciendis molestias porro voluptatem. Esse excepturi explicabo aperiam eos.
+                Все пациенты индивидуальны, и невозможно использовать одну и ту же технику увеличения для каждого, перед процедурой я всегда уточняю, какой результат Выхотите получить и в зависимости от вашего ответа подбирается  нужный препарат по плотности и соответствующая техника введения.
               </div>
             </div>
           </div>
@@ -289,13 +289,12 @@
               <h2 class="mb-0">
                 <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
                   Боюсь, что губы станут слишком большими и не натуральными!
-
                 </button>
               </h2>
             </div>
             <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordionExample">
               <div class="card-body">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui natus fuga ut? Accusamus suscipit tempore error architecto quia? Eos soluta consequuntur blanditiis, qui, nulla dolorem labore nam dignissimos reprehenderit suscipit recusandae iure minima.
+                Нужно понимать, что из-за механического воздействия в виде травматизации ткани, а также припереть лидокаина, проявляется отечность, которая сходит на 30-35% через две недели после процедуры. Поэтому будьте готовы, что, когда Вывстанете с кушетки, Выувидите «пельмешки», но окончательный результат можно наблюдать только через две недели после процедуры.
               </div>
             </div>
           </div>
@@ -310,7 +309,8 @@
             </div>
             <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#accordionExample">
               <div class="card-body">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste ab esse eos est sequi, facilis fuga dicta ipsa veniam fugiat recusandae eaque aliquam aut ducimus at excepturi reiciendis velit autem. Vero aliquam necessitatibus accusamus nihil repellat itaque!
+                «История».
+                У всего есть своя цена, не забывайте, что Вы видите только конечный результат.
               </div>
             </div>
           </div>
@@ -325,7 +325,8 @@
             </div>
             <div id="collapseEight" class="collapse" aria-labelledby="headingEight" data-parent="#accordionExample">
               <div class="card-body">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident perferendis voluptatum, possimus nostrum veritatis beatae omnis pariatur dignissimos voluptatibus quod saepe facere mollitia porro sint sequi impedit inventore, repudiandae animi vero. Culpa, blanditiis! Perferendis iusto aspernatur quis delectus sit. Possimus, dolore.
+                Все работы с моделями провожу я совместно с врачами-косметологами, которые проходят у меня повышение квалификации, поэтому за качество процедуры я отвечаю головой.
+                Не просто так девиз моей работы «верну деньги, если не понравится». Согласитесь, не каждый специалист готов настольно отвечать за результат своей работы, если он в ней не уверен.
               </div>
             </div>
           </div>
@@ -372,10 +373,10 @@
         </a>
         <div class="footer__top-menu">
           <nav>
-            <a href="#">Главная</a>
+            <a href="/">Главная</a>
             <a href="#">Работы</a>
-            <a href="#">Цены</a>
-            <a href="#">Обучения</a>
+            <a href="/services.html">Цены</a>
+            <a href="/education.html">Обучение</a>
           </nav>
         </div>
       </div>
