--- a/services.html
+++ b/services.html
@@ -16,10 +16,10 @@
       </a>
     </div>
     <nav class="header__menu">
-      <a href="#">Главная</a>
+      <a href="/">Главная</a>
       <a href="#">Работы</a>
-      <a href="#">Цены</a>
-      <a href="#">Обучение</a>
+      <a href="/services.html">Цены</a>
+      <a href="/education.html">Обучение</a>
       </nav>
     <a href="#" class="header__inst">
       <img src="img/inst.svg" alt="">
@@ -42,14 +42,47 @@
             <div class="card-header" id="headingOne">
               <h2 class="mb-0">
                 <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                  Сворачиваемый групповой элемент #1
+                  <div class="service__accord">
+                    <h3>Аугментация губ</h3>
+                    <div class="service__accord-wrap">
+                      <p class="service__accord-wrap-text">от 150 до 200 $</p>
+                      <div class="service__accord-arrow">
+                        <img src="img/arrow-acc.svg" alt="">
+                      </div>
+                    </div>
+                  </div>
                 </button>
               </h2>
             </div>
         
             <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
               <div class="card-body">
-                Некоторый заполнитель для первой панели аккордеона. Эта панель отображается по умолчанию благодаря классу <code>.show</code>.
+                <ul>
+                  <li>
+                    <p>Препараты Корея:</p>
+                    <p>от 155 $</p>
+                  </li>
+                  <li>
+                    <p>Stylage M:</p>
+                    <p>185 $</p>
+                  </li>
+                  <li>
+                    <p>Stylage L:</p>
+                    <p>190 $</p>
+                  </li>
+                  <li>
+                    <p>Juvederm 3:</p>
+                    <p>200 $</p>
+                  </li>
+                  <li>
+                    <p>Juvederm 4:</p>
+                    <p>210 $</p>
+                  </li>
+                  <li>
+                    <p>Belotero intense:</p>
+                    <p>220 $</p>
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
@@ -57,13 +90,42 @@
             <div class="card-header" id="headingTwo">
               <h2 class="mb-0">
                 <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  Сворачиваемый групповой элемент #2
+                  <div class="service__accord">
+                    <h3>Контурная пластика лица</h3>
+                    <div class="service__accord-wrap">
+                      <p class="service__accord-wrap-text">от 130 $</p>
+                      <div class="service__accord-arrow">
+                        <img src="img/arrow-acc.svg" alt="">
+                      </div>
+                    </div>
+                  </div>
                 </button>
               </h2>
             </div>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
               <div class="card-body">
-                Некоторый заполнитель для второй панели аккордеона. По умолчанию эта панель скрыта.
+                <ul>
+                  <li>
+                    <p>Препараты Корея:</p>
+                    <p>130 $</p>
+                  </li>
+                  <li>
+                    <p>Stylage M:</p>
+                    <p>165 $</p>
+                  </li>
+                  <li>
+                    <p>Stylage L:</p>
+                    <p>175 $</p>
+                  </li>
+                  <li>
+                    <p>Stylage XL:</p>
+                    <p>185 $</p>
+                  </li>
+                  <li>
+                    <p>Juvederm:</p>
+                    <p>200 $</p>
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
@@ -71,18 +133,196 @@
             <div class="card-header" id="headingThree">
               <h2 class="mb-0">
                 <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                  Сворачиваемый групповой элемент #3
+                  <div class="service__accord">
+                    <h3>Ботулинотерапия</h3>
+                    <div class="service__accord-wrap">
+                      <p class="service__accord-wrap-text">2,3 $ за единицу</p>
+                      <div class="service__accord-arrow">
+                        <img src="img/arrow-acc.svg" alt="">
+                      </div>
+                    </div>
+                  </div>
                 </button>
               </h2>
             </div>
             <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
               <div class="card-body">
-                И, наконец, заполнитель для третьей и последней панели аккордеона. По умолчанию эта панель скрыта.
+                <ul>
+                  <li>
+                    <p>Лоб 20-30 единиц: </p>
+                    <p>46-69 $</p>
+                  </li>
+                  <li>
+                    <p>Межбровье 6-10 единиц: </p>
+                    <p>14-23 $</p>
+                  </li>
+                  <li>
+                    <p>Гусиные лапки <br>
+                      10-18 единиц:</p>
+                    <p>23-41 $</p>
+                  </li>
+                  <li>
+                    <p>Кроличьи морщинки (на носу) <br> 4-10 единиц:</p>
+                    <p>9-23 $</p>
+                  </li>
+                  <li>
+                    <p>Сужение носа 14-20 единиц:</p>
+                    <p>32-46$</p>
+                  </li>
+                  <li>
+                    <p>Лечение бруксизма <br> (жевательные мышцы) <br>
+                      30-50 единиц: </p>
+                    <p>69-115$</p>
+                  </li>
+                  <li>
+                    <p>Лечение гингивальной <br> улыбки: </p>
+                    <p>20$</p>
+                  </li>
+                  <li>
+                    <p>Поднять уголки губ:</p>
+                    <p>30$</p>
+                  </li>
+                  <li>
+                    <p>Развернуть губы: </p>
+                    <p>15$</p>
+                  </li>
+                  <li>
+                    <p>Расслабить подбородок:</p>
+                    <p>15$</p>
+                  </li>
+                  <li>
+                    <p>Платизма (мышцы шеи) 60-80 <br> единиц: </p>
+                    <p>138-185$</p>
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
+          <div class="card">
+            <div class="card-header" id="headingFour">
+              <h2 class="mb-0">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                  <div class="service__accord">
+                    <h3>Биоревитализация</h3>
+                    <div class="service__accord-wrap">
+                      <p class="service__accord-wrap-text">от 120 до 250 $</p>
+                      <div class="service__accord-arrow">
+                        <img src="img/arrow-acc.svg" alt="">
+                      </div>
+                    </div>
+                  </div>
+                </button>
+              </h2>
+            </div>
+            <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
+              <div class="card-body">
+                <ul>
+                  <li>
+                    <p>Курс состоит из 3-5 процедур: <br>
+                      <span>(препарат подбирается <br> индивидуально на консультации)</span>
+                    </p>
+                    <p>120-250 $</p>
+                  </li>
+                  <li>
+                    <p>Коктейль Монако: <br>
+                      <span>(процедура делается <br> 1 раз в 4-6 месяцев)</span></p>
+                    <p>200-250 $</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-header" id="headingFive">
+              <h2 class="mb-0">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                  <div class="service__accord">
+                    <h3>Липолитики для лица</h3>
+                    <div class="service__accord-wrap">
+                      <p class="service__accord-wrap-text">от 40 $</p>
+                      <div class="service__accord-arrow">
+                        <img src="img/arrow-acc.svg" alt="">
+                      </div>
+                    </div>
+                  </div>
+                </button>
+              </h2>
+            </div>
+            <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
+              <div class="card-body">
+                <ul>
+                  <li>
+                    <p>Курс состоит из 2-6 процедур <br>
+                      <span>(кол-во процедур назначается <br> на приеме и зависит от <br> индивидуальных особенностей)</span>
+                    </p>
+                    <p>40 $ за 2 мл <br> (1 флакон)</p>
+                  </li>
+                  <li>
+                    <p>Второй подбородок</p>
+                    <p>2-4 флакона</p>
+                  </li>
+                  <li>
+                    <p>Нижняя треть лица (брыли)</p>
+                    <p>2-4 флакона</p>
+                  </li>
+                  <li>
+                    <p>Средняя треть лица</p>
+                    <p>1-4 флакона</p>
+                  </li>
+                  <li>
+                    <p>Нос</p>
+                    <p>1 флакон</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-header" id="headingSix">
+              <h2 class="mb-0">
+                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                  <div class="service__accord">
+                    <h3>Удаление старого филлера</h3>
+                    <div class="service__accord-wrap">
+                      <p class="service__accord-wrap-text">от 30 до 70 $</p>
+                      <div class="service__accord-arrow">
+                        <img src="img/arrow-acc.svg" alt="">
+                      </div>
+                    </div>
+                  </div>
+                </button>
+              </h2>
+            </div>
+            <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordionExample">
+              <div class="card-body">
+                <ul>
+                  <li>
+                    <p>Частичное удаление</p>
+                    <p>30$</p>
+                  </li>
+                  <li>
+                    <p>Удаление одной губы</p>
+                    <p>50$</p>
+                  </li>
+                  <li>
+                    <p>Полное удаление</p>
+                    <p>70$</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
         </div>
         <!-- / accordion -->
+        <div class="service__btn">
+          <a href="#">
+            <img src="img/arrow-q.svg" alt="">
+            <span>Записаться</span>
+          </a>
+        </div>
 
       </div>
     </div>
@@ -97,10 +337,10 @@
         </a>
         <div class="footer__top-menu">
           <nav>
-            <a href="#">Главная</a>
+            <a href="/">Главная</a>
             <a href="#">Работы</a>
-            <a href="#">Цены</a>
-            <a href="#">Обучения</a>
+            <a href="/services.html">Цены</a>
+            <a href="/education.html">Обучение</a>
           </nav>
         </div>
       </div>
