--- a/index.html
+++ b/index.html
@@ -10,39 +10,43 @@
 </head>
 <body>
   <header class="header">
-    <div class="header__logo">
-      <a href="/">
-        <img src="img/logo.png" alt="">
+    <div class="header__container">
+      <div class="header__logo">
+        <a href="/">
+          <img src="img/logo.svg" alt="">
+        </a>
+      </div>
+      <nav class="header__menu">
+        <a href="/">Главная</a>
+        <a href="#">Работы</a>
+        <a href="/services.html">Цены</a>
+        <a href="/education.html">Обучение</a>
+        </nav>
+      <a href="#" class="header__inst">
+        <img src="img/inst.svg" alt="">
       </a>
     </div>
-    <nav class="header__menu">
-      <a href="/">Главная</a>
-      <a href="#">Работы</a>
-      <a href="/services.html">Цены</a>
-      <a href="/education.html">Обучение</a>
-      </nav>
-    <a href="#" class="header__inst">
-      <img src="img/inst.svg" alt="">
-    </a>
   </header>
   
   <main>
     <div class="inject">
-      <div class="inject__info">
-        <div class="inject__info-wrapper">
-          <h1>Инъекционная косметология</h1>
-          <p>То, насколько женщина красива, зависит не от природы, <br> 
-            а от нее самой... <br><br>
-            Именно поэтому любая красота требует вложений!
-          </p>
-          <div>
-            <img src="img/arrow_1.svg" alt="">
+      <div class="inject__container">
+        <div class="inject__info">
+          <div class="inject__info-wrapper">
+            <h1>Инъекционная косметология</h1>
+            <p>То, насколько женщина красива, зависит не от природы, <br> 
+              а от нее самой... <br><br>
+              Именно поэтому любая красота требует вложений!
+            </p>
+            <div>
+              <img src="img/arrow_1.svg" alt="">
+            </div>
           </div>
         </div>
-      </div>
-
-      <div class="inject__photo">
-        <img src="img/doctor-1.jpg" alt="">
+        
+        <div class="inject__photo">
+          <img src="img/doctor-1.jpg" alt="">
+        </div>
       </div>
     </div>
 
@@ -164,38 +168,40 @@
     </div>
 
     <div class="gallery">
-      <div class="gallery__wrapper">
-        <div class="gallery__b1">
-          <div class="gallery__b1-img1">
-            <img src="img/dr-1-1.jpg" alt="">
+      <div class="gallery__container">
+        <div class="gallery__wrapper">
+          <div class="gallery__b1">
+            <div class="gallery__b1-img1">
+              <img src="img/dr-1-1.jpg" alt="">
+            </div>
+            <div class="gallery__b1-img2">
+              <img src="img/dr-1-2.jpg" alt="">
+            </div>
           </div>
-          <div class="gallery__b1-img2">
-            <img src="img/dr-1-2.jpg" alt="">
+          <div class="gallery__b2">
+            <div class="gallery__b2-img1">
+              <img src="img/dr-2-1.jpg" alt="">
+            </div>
+            <div class="gallery__b2-text">
+              <p>Записаться и узнать больше информации вы можете в  <a href="#">Instagram</a>, написав в <a href="#">direct</a>.</p>
+            </div>
+            <div class="gallery__b2-img2">
+              <img src="img/dr-2-2.jpg" alt="">
+            </div>
+          </div>
+          <div class="gallery__b3">
+            <div class="gallery__b3-img1">
+              <img src="img/dr-3-1.jpg" alt="">
+            </div>
+            <div class="gallery__b3-img2">
+              <img src="img/dr-3-2.jpg" alt="">
+            </div>
           </div>
         </div>
-        <div class="gallery__b2">
-          <div class="gallery__b2-img1">
-            <img src="img/dr-2-1.jpg" alt="">
-          </div>
-          <div class="gallery__b2-text">
-            <p>Записаться и узнать больше информации вы можете в  <a href="#">Instagram</a>, написав в <a href="#">direct</a>.</p>
-          </div>
-          <div class="gallery__b2-img2">
-            <img src="img/dr-2-2.jpg" alt="">
-          </div>
+        <div class="gallery__btn">
+          <a href="#">Записаться</a>
+          <img src="img/arrow_long.svg" alt="">
         </div>
-        <div class="gallery__b3">
-          <div class="gallery__b3-img1">
-            <img src="img/dr-3-1.jpg" alt="">
-          </div>
-          <div class="gallery__b3-img2">
-            <img src="img/dr-3-2.jpg" alt="">
-          </div>
-        </div>
-      </div>
-      <div class="gallery__btn">
-        <a href="#">Записаться</a>
-        <img src="img/arrow_long.svg" alt="">
       </div>
     </div>
 
@@ -382,7 +388,7 @@
       </div>
       <div class="footer__bottom">
         <a href="/">
-          <img src="img/f-main.png" alt="">
+          <img src="img/f-main.svg" alt="">
         </a>
       </div>
     </div>
