--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
   <header class="header header__education">
     <div class="header__logo">
       <a href="/">
-        <img src="img/logo.png" alt="">
+        <img src="img/logo.svg" alt="">
       </a>
     </div>
     <nav class="header__menu">
@@ -346,7 +346,7 @@
       </div>
       <div class="footer__bottom">
         <a href="/">
-          <img src="img/fs-main.png" alt="">
+          <img src="img/fs-main.svg" alt="">
         </a>
       </div>
     </div>
