--- a/education.html
+++ b/education.html
@@ -10,20 +10,22 @@
 </head>
 <body>
   <header class="header header__education">
-    <div class="header__logo">
-      <a href="/">
-        <img src="img/logo.svg" alt="">
+    <div class="header__container">
+      <div class="header__logo">
+        <a href="/">
+          <img src="img/logo.svg" alt="">
+        </a>
+      </div>
+      <nav class="header__menu">
+        <a href="/">Главная</a>
+        <a href="#">Работы</a>
+        <a href="/services.html">Цены</a>
+        <a href="/education.html">Обучение</a>
+        </nav>
+      <a href="#" class="header__inst">
+        <img src="img/inst.svg" alt="">
       </a>
     </div>
-    <nav class="header__menu">
-      <a href="/">Главная</a>
-      <a href="#">Работы</a>
-      <a href="/services.html">Цены</a>
-      <a href="/education.html">Обучение</a>
-      </nav>
-    <a href="#" class="header__inst">
-      <img src="img/inst.svg" alt="">
-    </a>
   </header> 
 
   <main class="main__edu">
