--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
         <div class="services__wrapper">
           <div class="services__left">
             <ul>
-              <li>Аугментация губ</li>
-              <li>Контурная пластика лица</li>
-              <li>Ботулинотерапия</li>
-              <li>Биоревитализация</li>
-              <li>Липолитики для лица</li>
-              <li>Удаление старого филлера</li>
+              <li><a href="#">Аугментация губ</a></li>
+              <li><a href="#">Контурная пластика лица</a></li>
+              <li><a href="#">Ботулинотерапия</a></li>
+              <li><a href="#">Биоревитализация</a></li>
+              <li><a href="#">Липолитики для лица</a></li>
+              <li><a href="#">Удаление старого филлера</a></li>
             </ul>
           </div>
           <div class="services__right">
