--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
             </div>
           </div>
         </div>
-        <div class="gallery__btn">
-          <a href="#">Записаться</a>
+        <a href="#" class="gallery__btn">
+          <span>Записаться</span>
           <img src="img/arrow_long.svg" alt="">
-        </div>
+        </a>
       </div>
     </div>
 
