--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
               а от нее самой... <br><br>
               Именно поэтому любая красота требует вложений!
             </p>
-            <div>
+            <a href="#">
               <img src="img/arrow_1.svg" alt="">
-            </div>
+            </a>
           </div>
         </div>
         
@@ -287,7 +287,7 @@
             </div>
             <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
               <div class="card-body">
-                Все пациенты индивидуальны, и невозможно использовать одну и ту же технику увеличения для каждого, перед процедурой я всегда уточняю, какой результат Выхотите получить и в зависимости от вашего ответа подбирается  нужный препарат по плотности и соответствующая техника введения.
+                Все пациенты индивидуальны, и невозможно использовать одну и ту же технику увеличения для каждого, перед процедурой я всегда уточняю, какой результат Вы хотите получить и в зависимости от вашего ответа подбирается  нужный препарат по плотности и соответствующая техника введения.
               </div>
             </div>
           </div>
@@ -345,7 +345,7 @@
     <div class="call">
       <div class="call__container">
 
-        <h3>У вас остались какие-либо вопросы и выхотите получить больше информации? <br>
+        <h3>У вас остались какие-либо вопросы и вы хотите получить больше информации? <br>
           Оставьте ваш номер и менеджер вам перезвонит.
         </h3>
 
