--- a/services.html
+++ b/services.html
@@ -33,7 +33,7 @@
   <main class="main__services">
     <div class="service">
       <div class="service__container">
-        <div class="service__breadcrumb">
+        <div class="f_breadcrumb">
           <a href="/index.html">Главная</a>
           <div></div>
           <a href="/">Цены</a>
