--- a/education.html
+++ b/education.html
@@ -31,6 +31,9 @@
       </div>
 
       <div class="header__body">
+        <a href="#" class="header__body-inst">
+          <img src="img/inst-black.svg" alt="">
+        </a>
         <a href="#" class="header__log">
           <img src="img/logo.svg" alt="">
         </a>
