--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Главная</title>
 </head>
 <body>
-  <header class="header header__education">
+  <header class="header">
     <div class="header__container">
       <div class="header__menu-pc">
         <div class="header__logo">
@@ -31,6 +31,9 @@
       </div>
 
       <div class="header__body">
+        <a href="#" class="header__body-inst">
+          <img src="img/inst-black.svg" alt="">
+        </a>
         <a href="#" class="header__log">
           <img src="img/logo.svg" alt="">
         </a>
@@ -64,9 +67,9 @@
         <div class="inject__info">
           <div class="inject__info-wrapper">
             <h1>Инъекционная косметология</h1>
-            <p>То, насколько женщина красива, зависит не от природы, <br> 
+            <p>То, насколько женщина красива, <br> зависит не от природы, <br> 
               а от нее самой... <br><br>
-              Именно поэтому любая красота требует вложений!
+              Именно поэтому любая красота <br> требует вложений!
             </p>
             <a href="#">
               <img src="img/arrow_1.svg" alt="">
@@ -136,15 +139,15 @@
 
     <div class="learn">
       <div class="learn__container">
-        <h2 class="learn__title">Индивидуальные <span>обучения</span> по авторской технике</h2>
+        <h2 class="learn__title">Индивидуальные <span>обучения</span> <br class="learn__br"> по авторской технике</h2>
         <p class="learn__text">Я прошла огромное количество обучений, благодаря которым создала свои техники, которые применяю в практике, и делюсь ими с вами на своих обучениях!
         </p>
         <div class="learn__table">
-          <div class="learn__table-b1">авторская техника <br> увеличения губ</div>
+          <div class="learn__table-b1">авторская <br class="learn__br-b1"> техника <br> увеличения губ</div>
           <div class="learn__table-b2">100 + <br> учениц</div>
           <div class="learn__table-b3">именные сертификаты <br> после обучения</div>
         </div>
-        <p class="learn__subtext">НО важно понимать, что я даю вам не техники, а шанс выхода на новый уровень, благодаря которому вы сможете зарабатывать в 5,  10 и 50 раз больше, чем вы зарабатываете сейчас!
+        <p class="learn__subtext">НО важно понимать, <br class="learn__br-sub"> что я даю вам не техники, <br class="learn__br-sub"> а шанс выхода на новый уровень, благодаря которому <br class="learn__br-sub"> вы сможете зарабатывать в 5,  10 и 50 раз больше, <br class="learn__br-sub"> чем вы зарабатываете сейчас!
         </p>
         <div class="learn__button">
           <a href="/">
@@ -206,22 +209,26 @@
             </div>
             <div class="gallery__b1-img2">
               <img src="img/dr-1-2.jpg" alt="">
+              <img src="img/dr-1-2m.jpg" alt="">
             </div>
           </div>
           <div class="gallery__b2">
             <div class="gallery__b2-img1">
               <img src="img/dr-2-1.jpg" alt="">
+              <img src="img/dr-2-1m.jpg" alt="">
             </div>
             <div class="gallery__b2-text">
               <p>Записаться и узнать больше информации вы можете в  <a href="#">Instagram</a>, написав в <a href="#">direct</a>.</p>
             </div>
             <div class="gallery__b2-img2">
               <img src="img/dr-2-2.jpg" alt="">
+              <img src="img/dr-2-2m.jpg" alt="">
             </div>
           </div>
           <div class="gallery__b3">
             <div class="gallery__b3-img1">
               <img src="img/dr-3-1.jpg" alt="">
+              <img src="img/dr-3-1m.jpg" alt="">
             </div>
             <div class="gallery__b3-img2">
               <img src="img/dr-3-2.jpg" alt="">
@@ -373,8 +380,8 @@
     <div class="call">
       <div class="call__container">
 
-        <h3>У вас остались какие-либо вопросы и вы хотите получить больше информации? <br>
-          Оставьте ваш номер и менеджер вам перезвонит.
+        <h3>У вас остались какие-либо вопросы <br class="call__br"> и вы хотите получить <br class="call__br"> больше информации? <br> <br class="call__br">
+          Оставьте ваш номер <br class="call__br"> и менеджер вам перезвонит.
         </h3>
 
         <form class="call__form" action="#">
