--- a/education.html
+++ b/education.html
@@ -100,22 +100,22 @@
         <h2>Что входит в обучение:</h2>
         <div class="in__list">
           <div class="in__list-show">
-            <p>Теория с рисунками техники аугментации губ на бумаге.</p>
-            <p>Ознакомление с препаратами. </p>
-            <p>Обучение контурной пластике лица (скулы, щечки, яблочки, подбородок, носогубные складки, углы нижней челюсти).</p>
-            <p>Схемы ботулинотерапии верхней трети лица.</p>
-            <p>Отработка на множестве моделей с утра до вечера.</p>
-            <p>Постановка руки.</p>
+            <p> <span class="in__point-span"></span> Теория с рисунками техники <br class="in__list-br"> аугментации губ на бумаге.</p>
+            <p> <span class="in__point-span"></span> Ознакомление с препаратами. </p>
+            <p> <span class="in__point-span"></span> Обучение контурной пластике лица <br class="in__list-br"> (скулы, щечки, яблочки, подбородок, <br class="in__list-br"> носогубные складки, углы нижней челюсти).</p>
+            <p> <span class="in__point-span"></span> Схемы ботулинотерапии <br class="in__list-br"> верхней трети лица.</p>
+            <p> <span class="in__point-span"></span> Отработка на множестве моделей <br class="in__list-br"> с утра до вечера.</p>
+            <p> <span class="in__point-span"></span> Постановка руки.</p>
             <div class="in__showed">
-              <p>Все самые важные секреты , лайфхаки и приёмы в работе косметолога, которые мало кто объясняет и использует.</p>
-              <p>Разбор неотложных состояний и оказание первой медицинской помощи.</p>
-              <p>Делюсь контактами прямых поставщиков препаратов.</p>
-              <p>Подробная инструкция как правильно делать фото и видео работ до/после.</p>
-              <p>Все фото моделей ДО/ПОСЛЕ с обучения Вы можете использовать для развития личного рабочего аккаунта.</p>
-              <p>Рассказываю как правильно вести рабочий Аккаунт и получить гарантированную активность с первой публикации.</p>
-              <p>Своим ученикам я даю ВЕСЬ курс теории по косметологии в электронном виде. Туда входит анатомия , ботулинотерапия, дерматология , контурная пластика, реанимация, неотложная помощь, аптечка , видео уроки оформления губ и очень много нужной и полезной информации для начинающего косметолога. Весь курс теории я скидываю для изучения ДО нашего обучения, чтоб ученик приходил с осознанием того,что и как мы будем делать.</p>
-              <p>Предоставляю множество готовых текстов, постов для косметолога и более 200 сториз на тему косметологии для ведения рабочего аккаунта.</p>
-              <p>В конце обучения выдаётся сертификат.</p>
+              <p> <span class="in__point-span"></span> Все самые важные секреты , лайфхаки и приёмы в работе косметолога, которые мало кто объясняет и использует.</p>
+              <p> <span class="in__point-span"></span> Разбор неотложных состояний и оказание первой медицинской помощи.</p>
+              <p> <span class="in__point-span"></span> Делюсь контактами прямых поставщиков препаратов.</p>
+              <p> <span class="in__point-span"></span> Подробная инструкция как правильно делать фото и видео работ до/после.</p>
+              <p> <span class="in__point-span"></span> Все фото моделей ДО/ПОСЛЕ с обучения Вы можете использовать для развития личного рабочего аккаунта.</p>
+              <p> <span class="in__point-span"></span> Рассказываю как правильно вести рабочий Аккаунт и получить гарантированную активность с первой публикации.</p>
+              <p> <span class="in__point-span"></span> Своим ученикам я даю ВЕСЬ курс теории по косметологии в электронном виде. Туда входит анатомия , ботулинотерапия, дерматология , контурная пластика, реанимация, неотложная помощь, аптечка , видео уроки оформления губ и очень много нужной и полезной информации для начинающего косметолога. Весь курс теории я скидываю для изучения ДО нашего обучения, чтоб ученик приходил с осознанием того,что и как мы будем делать.</p>
+              <p> <span class="in__point-span"></span> Предоставляю множество готовых текстов, постов для косметолога и более 200 сториз на тему косметологии для ведения рабочего аккаунта.</p>
+              <p> <span class="in__point-span"></span> В конце обучения выдаётся сертификат.</p>
             </div>
             <div class="in__button slide-toggle">
               <div class="in__button-img"></div>
@@ -286,8 +286,8 @@
     <div class="call call2">
       <div class="call__container">
 
-        <h3>У вас остались какие-либо вопросы и вы хотите получить больше информации? <br>
-          Оставьте ваш номер и менеджер вам перезвонит.
+        <h3>У вас остались какие-либо вопросы <br> и вы хотите получить <br> больше информации? <br><br>
+          Оставьте ваш номер <br> и менеджер вам перезвонит.
         </h3>
 
         <form class="call__form" action="#">
