--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <div class="header__container">
       <div class="header__menu-pc">
         <div class="header__logo">
-          <a href="/">
-            <img src="img/logo.svg" alt="">
+          <a href="../">
+            <img src="../img/logo.svg" alt="">
           </a>
         </div>
         <nav class="header__menu">
-          <a href="/">Главная</a>
-          <a href="#">Работы</a>
-          <a href="/services.html">Цены</a>
-          <a href="/education.html">Обучение</a>
+          <a href="../">Главная</a>
+          <a href="../works/index.html">Работы</a>
+          <a href="../products/index.html">Цены</a>
+          <a href="../education/index.html">Обучение</a>
           </nav>
         <a href="#" class="header__inst">
           <svg width="43" height="44" viewBox="0 0 43 44" xmlns="http://www.w3.org/2000/svg">
@@ -32,10 +32,10 @@
 
       <div class="header__body">
         <a href="#" class="header__body-inst">
-          <img src="img/inst-black.svg" alt="">
+          <img src="../img/inst-black.svg" alt="">
         </a>
         <a href="#" class="header__log">
-          <img src="img/logo.svg" alt="">
+          <img src="../img/logo.svg" alt="">
         </a>
         <div class="header__burger">
           <span></span>
@@ -43,16 +43,16 @@
         <nav class="header__menu-mobile">
           <ul class="header__list">
             <li>
-              <a href="#" class="header__link">Главная</a>
+              <a href="../" class="header__link">Главная</a>
             </li>
             <li>
-              <a href="#" class="header__link">Работы</a>
+              <a href="../works/index.html" class="header__link">Работы</a>
             </li>
             <li>
-              <a href="#" class="header__link">Цены</a>
+              <a href="../products/index.html" class="header__link">Цены</a>
             </li>
             <li>
-              <a href="#" class="header__link">Обучение</a>
+              <a href="../education/index.html" class="header__link">Обучение</a>
             </li>
           </ul>
         </nav>
@@ -101,7 +101,7 @@
               <li>Дарить уверенность и любовь к себе.</li>
               <li>Проводить только те процедуры, которые действительно необходимы пациентам.</li>
             </ul>
-            <a href="/">
+            <a href="/works/index.html">
               <img src="img/arrow_2.svg" alt="">
               <p>Увидеть работы</p>
             </a>
@@ -128,7 +128,7 @@
             <div>
               <img src="img/doctor_4.jpg" alt="">
             </div>
-            <a href="/">
+            <a href="#call">
               <img src="img/arrow_2.svg" alt="">
               <p>Записаться</p>
             </a>
@@ -150,7 +150,7 @@
         <p class="learn__subtext">НО важно понимать, <br class="learn__br-sub"> что я даю вам не техники, <br class="learn__br-sub"> а шанс выхода на новый уровень, благодаря которому <br class="learn__br-sub"> вы сможете зарабатывать в 5,  10 и 50 раз больше, <br class="learn__br-sub"> чем вы зарабатываете сейчас!
         </p>
         <div class="learn__button">
-          <a href="/">
+          <a href="/education/index.html">
             <img src="img/arrow_2.svg" alt="">
             <p>Узнать подробнее</p>
           </a>
@@ -235,7 +235,7 @@
             </div>
           </div>
         </div>
-        <a href="#" class="gallery__btn">
+        <a href="#call" class="gallery__btn">
           <span>Записаться</span>
           <img src="img/arrow_long.svg" alt="">
         </a>
@@ -377,7 +377,7 @@
       </div>
     </div>
 
-    <div class="call">
+    <div class="call" id="call">
       <div class="call__container">
 
         <h3>У вас остались какие-либо вопросы <br class="call__br"> и вы хотите получить <br class="call__br"> больше информации? <br> <br class="call__br">
@@ -417,9 +417,9 @@
         <div class="footer__top-menu">
           <nav>
             <a href="/">Главная</a>
-            <a href="#">Работы</a>
-            <a href="/services.html">Цены</a>
-            <a href="/education.html">Обучение</a>
+            <a href="/works/index.html">Работы</a>
+            <a href="/products/index.html">Цены</a>
+            <a href="/education/index.html">Обучение</a>
           </nav>
         </div>
       </div>
