--- a/products/index.html
+++ b/products/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../css/main.css">
   <title>Услуги</title>
 </head>
 <body>
@@ -13,15 +13,15 @@
     <div class="header__container">
       <div class="header__menu-pc">
         <div class="header__logo">
-          <a href="/">
-            <img src="img/logo.svg" alt="">
+          <a href="../">
+            <img src="../img/logo.svg" alt="">
           </a>
         </div>
         <nav class="header__menu">
-          <a href="/">Главная</a>
-          <a href="#">Работы</a>
-          <a href="/services.html">Цены</a>
-          <a href="/education.html">Обучение</a>
+          <a href="../">Главная</a>
+          <a href="../works/index.html">Работы</a>
+          <a href="../products/index.html">Цены</a>
+          <a href="../education/index.html">Обучение</a>
           </nav>
         <a href="#" class="header__inst">
           <svg width="43" height="44" viewBox="0 0 43 44" xmlns="http://www.w3.org/2000/svg">
@@ -32,10 +32,10 @@
 
       <div class="header__body">
         <a href="#" class="header__body-inst">
-          <img src="img/inst-black.svg" alt="">
+          <img src="../img/inst-black.svg" alt="">
         </a>
         <a href="#" class="header__log">
-          <img src="img/logo.svg" alt="">
+          <img src="../img/logo.svg" alt="">
         </a>
         <div class="header__burger">
           <span></span>
@@ -43,16 +43,16 @@
         <nav class="header__menu-mobile">
           <ul class="header__list">
             <li>
-              <a href="#" class="header__link">Главная</a>
+              <a href="../" class="header__link">Главная</a>
             </li>
             <li>
-              <a href="#" class="header__link">Работы</a>
+              <a href="../works/index.html" class="header__link">Работы</a>
             </li>
             <li>
-              <a href="#" class="header__link">Цены</a>
+              <a href="../products/index.html" class="header__link">Цены</a>
             </li>
             <li>
-              <a href="#" class="header__link">Обучение</a>
+              <a href="../education/index.html" class="header__link">Обучение</a>
             </li>
           </ul>
         </nav>
@@ -82,7 +82,7 @@
                     <div class="service__accord-wrap">
                       <p class="service__accord-wrap-text">от 150 до 200 $</p>
                       <div class="service__accord-arrow">
-                        <img src="img/arrow-acc.svg" alt="">
+                        <img src="../img/arrow-acc.svg" alt="">
                       </div>
                     </div>
                   </div>
@@ -130,7 +130,7 @@
                     <div class="service__accord-wrap">
                       <p class="service__accord-wrap-text">от 130 $</p>
                       <div class="service__accord-arrow">
-                        <img src="img/arrow-acc.svg" alt="">
+                        <img src="../img/arrow-acc.svg" alt="">
                       </div>
                     </div>
                   </div>
@@ -173,7 +173,7 @@
                     <div class="service__accord-wrap">
                       <p class="service__accord-wrap-text">2,3 $ за единицу</p>
                       <div class="service__accord-arrow">
-                        <img src="img/arrow-acc.svg" alt="">
+                        <img src="../img/arrow-acc.svg" alt="">
                       </div>
                     </div>
                   </div>
@@ -242,7 +242,7 @@
                     <div class="service__accord-wrap">
                       <p class="service__accord-wrap-text">от 120 до 250 $</p>
                       <div class="service__accord-arrow">
-                        <img src="img/arrow-acc.svg" alt="">
+                        <img src="../img/arrow-acc.svg" alt="">
                       </div>
                     </div>
                   </div>
@@ -277,7 +277,7 @@
                     <div class="service__accord-wrap">
                       <p class="service__accord-wrap-text">от 40 $</p>
                       <div class="service__accord-arrow">
-                        <img src="img/arrow-acc.svg" alt="">
+                        <img src="../img/arrow-acc.svg" alt="">
                       </div>
                     </div>
                   </div>
@@ -323,7 +323,7 @@
                     <div class="service__accord-wrap">
                       <p class="service__accord-wrap-text">от 30 до 70 $</p>
                       <div class="service__accord-arrow">
-                        <img src="img/arrow-acc.svg" alt="">
+                        <img src="../img/arrow-acc.svg" alt="">
                       </div>
                     </div>
                   </div>
@@ -353,8 +353,8 @@
         </div>
         <!-- / accordion -->
         <div class="service__btn">
-          <a href="#">
-            <img src="img/arrow-q.svg" alt="">
+          <a href="../index.html#call">
+            <img src="../img/arrow-q.svg" alt="">
             <span>Записаться</span>
           </a>
         </div>
@@ -368,29 +368,29 @@
     <div class="footer__container">
       <div class="footer__top">
         <a href="#" class="footer__top-img">
-          <img src="img/inst-black.svg" alt="">
+          <img src="../img/inst-main.svg" alt="">
         </a>
         <div class="footer__top-menu">
           <nav>
-            <a href="/">Главная</a>
-            <a href="#">Работы</a>
-            <a href="/services.html">Цены</a>
-            <a href="/education.html">Обучение</a>
+            <a href="../">Главная</a>
+            <a href="../works/index.html">Работы</a>
+            <a href="../products/index.html">Цены</a>
+            <a href="../education/index.html">Обучение</a>
           </nav>
         </div>
       </div>
       <div class="footer__bottom">
-        <a href="/">
-          <img src="img/fs-main.svg" alt="">
+        <a href="../">
+          <img src="../img/f-main.svg" alt="">
         </a>
       </div>
     </div>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
-  <script src="js/jquery.maskedinput.min.js"></script>
+  <script src="../js/jquery.maskedinput.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
-  <script src="js/slick.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="../js/slick.min.js"></script>
+  <script src="../js/main.js"></script>
 </body>
 </html>
