--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <div class="header__container">
       <div class="header__menu-pc">
         <div class="header__logo">
-          <a href="../">
-            <img src="../img/logo.svg" alt="">
+          <a href="/">
+            <img src="img/logo.svg" alt="">
           </a>
         </div>
         <nav class="header__menu">
-          <a href="../">Главная</a>
-          <a href="../works/index.html">Работы</a>
-          <a href="../products/index.html">Цены</a>
-          <a href="../education/index.html">Обучение</a>
+          <a href="/">Главная</a>
+          <a href="/works/index.html">Работы</a>
+          <a href="/products/index.html">Цены</a>
+          <a href="/education/index.html">Обучение</a>
           </nav>
         <a href="#" class="header__inst">
           <svg width="43" height="44" viewBox="0 0 43 44" xmlns="http://www.w3.org/2000/svg">
@@ -32,10 +32,10 @@
 
       <div class="header__body">
         <a href="#" class="header__body-inst">
-          <img src="../img/inst-black.svg" alt="">
+          <img src="img/inst-black.svg" alt="">
         </a>
         <a href="#" class="header__log">
-          <img src="../img/logo.svg" alt="">
+          <img src="img/logo.svg" alt="">
         </a>
         <div class="header__burger">
           <span></span>
