--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
         <nav class="header__menu-mobile">
           <ul class="header__list">
             <li>
-              <a href="../" class="header__link">Главная</a>
+              <a href="/" class="header__link">Главная</a>
             </li>
             <li>
-              <a href="../works/index.html" class="header__link">Работы</a>
+              <a href="/works/index.html" class="header__link">Работы</a>
             </li>
             <li>
-              <a href="../products/index.html" class="header__link">Цены</a>
+              <a href="/products/index.html" class="header__link">Цены</a>
             </li>
             <li>
-              <a href="../education/index.html" class="header__link">Обучение</a>
+              <a href="/education/index.html" class="header__link">Обучение</a>
             </li>
           </ul>
         </nav>
